{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 36,
  "lineage": "56bb4098-6975-35b0-030e-43125721dd24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ef55c1a65c52c1e",
            "arn": "arn:aws:ec2:us-east-1:808765743851:elastic-ip/eipalloc-04ef55c1a65c52c1e",
            "domain": "vpc",
            "id": "eipalloc-04ef55c1a65c52c1e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-226-112-245.compute-1.amazonaws.com",
            "public_ip": "3.226.112.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "beacon-nat-eip"
            },
            "tags_all": {
              "Name": "beacon-nat-eip",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:internet-gateway/igw-0e38ddeea282033ad",
            "id": "igw-0e38ddeea282033ad",
            "owner_id": "808765743851",
            "tags": {
              "Name": "beacon-igw"
            },
            "tags_all": {
              "Name": "beacon-igw",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808765743851:loadbalancer/app/beacon-api-dev/28e194346d7b9e15",
            "arn_suffix": "app/beacon-api-dev/28e194346d7b9e15",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "beacon-api-dev-956519327.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:808765743851:loadbalancer/app/beacon-api-dev/28e194346d7b9e15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "beacon-api-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05306f2682da60d83"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f8f98ad34d3fa8b"
              },
              {
                "subnet_id": "subnet-0d85198fcf1400a26"
              }
            ],
            "subnets": [
              "subnet-00f8f98ad34d3fa8b",
              "subnet-0d85198fcf1400a26"
            ],
            "tags": {
              "Name": "beacon-api-alb"
            },
            "tags_all": {
              "Name": "beacon-api-alb",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc_id": "vpc-09e1432be69b9a423",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808765743851:listener/app/beacon-api-dev/28e194346d7b9e15/8d944899b76c4190",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:808765743851:targetgroup/beacon-api-dev/0fbb591fc3f11f9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808765743851:listener/app/beacon-api-dev/28e194346d7b9e15/8d944899b76c4190",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:808765743851:loadbalancer/app/beacon-api-dev/28e194346d7b9e15",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808765743851:targetgroup/beacon-api-dev/0fbb591fc3f11f9e",
            "arn_suffix": "targetgroup/beacon-api-dev/0fbb591fc3f11f9e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/stats",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808765743851:targetgroup/beacon-api-dev/0fbb591fc3f11f9e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "beacon-api-dev",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "beacon-api-tg"
            },
            "tags_all": {
              "Name": "beacon-api-tg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ef55c1a65c52c1e",
            "association_id": "eipassoc-0bff446f6e5ad711b",
            "connectivity_type": "public",
            "id": "nat-07bac9e7519c2afcc",
            "network_interface_id": "eni-054d8a6b332e4d0f5",
            "private_ip": "10.0.0.218",
            "public_ip": "3.226.112.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d85198fcf1400a26",
            "tags": {
              "Name": "beacon-nat"
            },
            "tags_all": {
              "Name": "beacon-nat",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:route-table/rtb-09c896d64340106fd",
            "id": "rtb-09c896d64340106fd",
            "owner_id": "808765743851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07bac9e7519c2afcc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "beacon-private-rt"
            },
            "tags_all": {
              "Name": "beacon-private-rt",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:route-table/rtb-0ae3f8606645adc85",
            "id": "rtb-0ae3f8606645adc85",
            "owner_id": "808765743851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e38ddeea282033ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "beacon-public-rt"
            },
            "tags_all": {
              "Name": "beacon-public-rt",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057dad770ca716dfb",
            "route_table_id": "rtb-09c896d64340106fd",
            "subnet_id": "subnet-06420697615695034"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cf5479573b3b63",
            "route_table_id": "rtb-09c896d64340106fd",
            "subnet_id": "subnet-0bbf461e785de55a1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0213b052375a25d17",
            "route_table_id": "rtb-0ae3f8606645adc85",
            "subnet_id": "subnet-0d85198fcf1400a26"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0104affda735f5883",
            "route_table_id": "rtb-0ae3f8606645adc85",
            "subnet_id": "subnet-00f8f98ad34d3fa8b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:security-group/sg-05306f2682da60d83",
            "description": "ALB public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05306f2682da60d83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "beacon-alb-20260306175119366000000003",
            "name_prefix": "beacon-alb-",
            "owner_id": "808765743851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "beacon-alb-sg"
            },
            "tags_all": {
              "Name": "beacon-alb-sg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clickhouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:security-group/sg-020e71bc9146cb353",
            "description": "ClickHouse server access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020e71bc9146cb353",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ClickHouse HTTP from ECS",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08145f6fc38564508"
                ],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [],
                "description": "ClickHouse native protocol from ECS",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08145f6fc38564508"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "beacon-clickhouse-20260306175122481100000005",
            "name_prefix": "beacon-clickhouse-",
            "owner_id": "808765743851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "beacon-clickhouse-sg"
            },
            "tags_all": {
              "Name": "beacon-clickhouse-sg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:security-group/sg-08145f6fc38564508",
            "description": "ECS task networking",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08145f6fc38564508",
            "ingress": [],
            "name": "beacon-ecs-20260306175119361200000002",
            "name_prefix": "beacon-ecs-",
            "owner_id": "808765743851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "beacon-ecs-sg"
            },
            "tags_all": {
              "Name": "beacon-ecs-sg",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-878483208",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08145f6fc38564508",
            "security_group_rule_id": "sgr-018aba12caa6416fd",
            "self": false,
            "source_security_group_id": "sg-05306f2682da60d83",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:subnet/subnet-06420697615695034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06420697615695034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808765743851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beacon-private-0"
            },
            "tags_all": {
              "Name": "beacon-private-0",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:subnet/subnet-0bbf461e785de55a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbf461e785de55a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808765743851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beacon-private-1"
            },
            "tags_all": {
              "Name": "beacon-private-1",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:subnet/subnet-0d85198fcf1400a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d85198fcf1400a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808765743851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beacon-public-0"
            },
            "tags_all": {
              "Name": "beacon-public-0",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:subnet/subnet-00f8f98ad34d3fa8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f8f98ad34d3fa8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808765743851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beacon-public-1"
            },
            "tags_all": {
              "Name": "beacon-public-1",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            },
            "vpc_id": "vpc-09e1432be69b9a423"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808765743851:vpc/vpc-09e1432be69b9a423",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019b244907af4fd2b",
            "default_route_table_id": "rtb-04546cbd07a2921ce",
            "default_security_group_id": "sg-090ccf8dd9f312771",
            "dhcp_options_id": "dopt-0bf5535a2f4cd71da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e1432be69b9a423",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04546cbd07a2921ce",
            "owner_id": "808765743851",
            "tags": {
              "Name": "beacon-dev"
            },
            "tags_all": {
              "Name": "beacon-dev",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "beacon"
            }
          }
        }
      ]
    }
  ]
}